[package]
name = "rs-t_umask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.25.0", default-features = false, features = ["fs"] }
unix_mode = "0.1.3"
unix_permissions_ext = "0.1.2"
